--- a/src/Components/Calculator/NumbersContainer/NumbersContainer.module.css
+++ b/src/Components/Calculator/NumbersContainer/NumbersContainer.module.css
@@ -7,3 +7,32 @@
     width: 500px;
     gap: 10px;
 }
+
+.botonclassic {
+    background-color:  rgb(69, 69, 69);
+    color: black;
+  }
+  
+  .botonred {
+    background-color: rgb(176, 9, 9);
+  }
+  
+  .green {
+    background-color:rgb(3, 104, 12);
+  }
+  
+  .goldSilver {
+    background-color: gold;
+  }
+  
+  .image {
+    background-image: url('../../assets/images/pikachu.png');
+    background-size: cover;
+    color: white;
+  }
+  
+  .cool {
+    background: -webkit-linear-gradient(to bottom, rgb(252, 3, 227), rgb(41, 213, 127));
+    background: linear-gradient(to bottom, rgb(252, 3, 227), rgb(41, 213, 127));
+    color: white;
+  }
