--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,7 +1,6 @@
-.contenedor {
-    background-image: url('./assets/images/mesa.png');
-    padding-top: 10px;
-    padding-bottom: 10px;
+.container {
+    width: 100%;
+    padding-top: 5%;
     display: flex;
     align-items: center;
     justify-content: space-around;
