--- a/src/Components/CalculationHistory/HistoryContainer/Notes/Notes.module.css
+++ b/src/Components/CalculationHistory/HistoryContainer/Notes/Notes.module.css
@@ -1,43 +1,71 @@
 .historialCalculos {
-    border: 2px solid white;
-    width: 350px;
-    height: 500px;
-    background-color: rgb(69, 69, 69);
-    overflow: auto;
+  border: 2px solid white;
+  width: 350px;
+  height: 500px;
+  background-color: rgb(69, 69, 69);
+  overflow: auto;
 }
 
-h1 {
-    text-align: center;
-    font-family: 'Lucida Sans';
-    color: white;
-    font-size: 25px;
-    text-decoration: underline;
+.historialCalculos h1 {
+  text-align: center;
+  font-family: 'Lucida Sans';
+  font-size: 25px;
+  text-decoration: underline;
 }
 
 .contenedorBoton {
-display: flex;
-flex-direction: column;
-height: 30px;
-margin-right: 20px;
+  display: flex;
+  flex-direction: column;
+  height: 30px;
+  margin-right: 20px;
 }
 
-.botonResult{
-    color: white;
-    text-align: left;
-    background-color: rgb(69, 69, 69);
-    height: 30px;
-    width: 100%;
-    list-style: none;
-    color: white;
-    letter-spacing: 1px;
-    font-size: 20px;
-
+.botonResult {
+  text-align: left;
+  height: 30px;
+  width: 100%;
+  list-style: none;
+  letter-spacing: 1px;
+  font-size: 20px;
 }
 
-li{
-    list-style: none;
-    color: white;
-    letter-spacing: 1px;
-    font-size: 20px;    
+li {
+  list-style: none;
+  letter-spacing: 1px;
+  font-size: 20px;
 }
 
+.classic {
+  background-color: rgb(69, 69, 69);
+  color: white;
+}
+
+.red {
+  font-weight: bold;
+  background-color: rgb(176, 9, 9);
+  color: white;
+}
+
+.green {
+  font-weight: bold;
+  background-color: rgb(3, 104, 12);
+  color: white;
+}
+
+.goldSilver {
+  font-weight: bold;
+  background-color: gold;
+  color: black;
+}
+
+.image {
+  background-color: yellow;
+  color: black;
+  font-weight: 600;
+}
+
+.cool {
+  background: -webkit-linear-gradient(to bottom, rgb(252, 3, 227), rgb(41, 213, 127));
+  background: linear-gradient(to bottom, rgb(252, 3, 227), rgb(41, 213, 127));
+  color: white;
+}
